--- a/about.html
+++ b/about.html
@@ -8,8 +8,8 @@
 </head>
 <body>
         <div class="program">
-            <p>We make your life healthier</p>
-            <p>We create healthy meal plans</p>
+            <p>Make your life healthier</p>
+            <p> Create cheap but healthy meal plans</p>
             <a href="./index.html"><p1>Go back to home page</p1></a>
      
          </div>
