--- a/index.html
+++ b/index.html
@@ -12,24 +12,29 @@
        <header style="color: yellowgreen;">
     
        <div class="welcome">
-            <h1>A Healthy Nation with Rayken</h1>
+            <h1>Rayken Presents:A Healthy Nation</h1>
           </div>
       
-        <div class="about">
+        <div class="welcome">
         <a href="./about.html"><p1>About Us</p1></a>
         </div>
-        <div class="contact">
-         <a href="+254707478399">Contact us</a>
+        <div class="welcome">
+         <a href="+254707478399"><p>Contact us</p>
          </div>
     </header>
+ 
 </div>
+
+<div> 
     <nav class="learn">
         <ol>
             <li>Introduction</li>
-            <li>Content</li>
+            <li>Benefits</li>
+            <li>Offers</li>
+            <li>Working Hours</li>
         </ol>
     </nav>
-
+</div>
         <div class="project">
             <h1>Healthy Living</h1>
             <p>Healthy living means making positive choices that enhance your personal physical, mental and spiritual health. It may entail building a circle of social contacts to create a supportive environment of people who care for you and respect you; stay physically active to keep your body strong, reduce stress, and improve your energy. choose not to smoke; and put an end to other negative lifestyle practices.</p>
@@ -40,7 +45,7 @@
         </div>
 
       <div class="benefits">
-            <h1>Benefits of Healthy Living</h1>
+            <h1>Benefits <span>of Healthy Living</span></h1>
             <ol>
                 <li>Mental stability</li>
                 <li>Fewer health issues</li>
@@ -53,7 +58,7 @@
             <ul>
                 <li>Develop meal plans</li>
                 <li>Help you make healthy food choices</li>
-                <li>Supplements</li>
+                <li>Food Supplements</li>
                 <li>Help you understand the connection between food and health</li>
                 <li>Guidance towards achieving a healthy lifestyle</li>
             </ul>
